# Ostara

./: .gitignore  CHANGELOG.md  Ostara.cabal  README.md
app/: AxiomSystem.hs  Cnf.hs  FOL.hs  Main.hs  Parser.hs  Resolution.hs  Subst.hs  test.fi
python_frontend/: Ostara  main.py
python_frontend/web/: index.js  main.html  style.css
